<resources>
    <string name="app_name">Covid19</string>

    <string name="skip">Skip</string>
    <string name="next_step">Next Step</string>
    <string name="start_now">Start Now</string>

    <string name="wear_mask_title">Wear Mask</string>
    <string name="wear_mask_desc">Cover mouth and nose with mask &amp; no gaps between your face and the mask.</string>
    <string name="wash_hand_title">Wash Your Hands</string>
    <string name="wash_hand_desc">Clean your hands often. Use soap and water, or an alcohol-based hand rub.</string>
    <string name="use_nose_rag_title">Use Nose Rag</string>
    <string name="use_nose_rag_desc">Cover your nose and mouth with your bent elbow or a tissue when you cough.</string>

    <string name="recovered">Recovered</string>
    <string name="confirmed">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="top_country">Top Country</string>
    <string name="view_all">View All</string>
    <string name="network_error">Network connection failed please try again</string>
    <string name="active">active</string>
    <string name="fatality_rate">Fatality Rate</string>
    <string name="last_update">Last Update</string>
    <string name="total_case">Total Case</string>
    <string name="search_for_country">Search for country</string>
    <string name="statistics_header">Statistics</string>
    <string name="country_header">Country</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="more">More</string>

    <string name="sets_filter">Sets Filter</string>
    <string name="asc">Asc</string>
    <string name="des">Des</string>
    <string name="continent">CONTINENT</string>
    <string name="all">All</string>
    <string name="oceania">Oceania</string>
    <string name="north_america">North-America</string>
    <string name="south_america">South-America</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="africa">Africa</string>
    <string name="sorted_by">SORTED BY</string>
    <string name="apply_filter">Apply Filter</string>

    <string name="search_hint">what are you looking for ?</string>
    <string name="empty_recent_search">No recent searches</string>
    <string name="empty_search">No results found</string>
    <string name="clear_history">Clear history</string>
    <string name="recent_search">Recent search</string>
    <string name="country_find">Country find</string>

    <string name="version">version 1.0.0</string>
    <string name="release_note">Release Note</string>
    <string name="contact_us">Contact Us</string>
    <string name="donate_to_developer">Donate to developer</string>
    <string name="suggest_to_friends">Suggest to friends</string>
    <string name="other">Other</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="update_scheduling">Update Scheduling</string>
    <string name="theme">Theme</string>
    <string name="language">Language (زبان)</string>
    <string name="general">General</string>
    <string name="location">Location</string>

    <string name="english">English</string>
    <string name="persian">فارسی</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system_default">System Default</string>

    <string name="symbol">:</string>
    <string name="confirm_time">Confirm Time</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="every_minute">Every Minute</string>
    <string name="every_hour">Every Hour</string>
    <string name="every">Every</string>
    <string name="every_hour_one_minute">Every Hour &amp; One Minute</string>
    <string name="every_hour_and">Every Hour &amp;</string>
    <string name="hour_and_one_minute">Hour &amp; One Minute</string>
    <string name="and">&amp;</string>

    <string name="hello">Hello Jakode</string>

</resources>