<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.jakode.covid19.ui.settings.TimeDialog.MyHandlers" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hour"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/view_stroke_off"
                android:gravity="center"
                android:onClick="@{(view) -> handlers.onClick(view)}"
                android:textColor="@color/color_secondary_text"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/confirm"
                app:layout_constraintEnd_toStartOf="@+id/minute"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="23" />

            <View
                android:id="@+id/header"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bottom_sheet_header"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/update_scheduling"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/minute"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:background="@drawable/view_stroke_on"
                android:gravity="center"
                android:onClick="@{(view) -> handlers.onClick(view)}"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/hour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/hour"
                app:layout_constraintTop_toTopOf="@+id/hour"
                tools:text="59" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hour"
                android:textColor="@color/color_secondary_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/hour"
                app:layout_constraintStart_toStartOf="@+id/hour"
                app:layout_constraintTop_toBottomOf="@+id/hour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/minute"
                android:textColor="@color/color_secondary_text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/minute"
                app:layout_constraintStart_toStartOf="@+id/minute"
                app:layout_constraintTop_toBottomOf="@+id/minute" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bottom_sheet_button"
                android:onClick="@{() -> handlers.confirmed()}"
                android:text="@string/confirm_time"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hour" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symbol"
                android:textColor="@color/color_secondary_text"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/hour"
                app:layout_constraintEnd_toStartOf="@+id/minute"
                app:layout_constraintStart_toEndOf="@+id/hour"
                app:layout_constraintTop_toTopOf="@+id/hour" />

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/background"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toTopOf="@+id/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/minute"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:longClickable="true"
                        android:onClick="@{() -> handlers.plus()}"
                        android:padding="2dp"
                        app:layout_constraintBottom_toTopOf="@+id/minus"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_add"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/minus"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{() -> handlers.minus()}"
                        android:padding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plus"
                        app:srcCompat="@drawable/ic_remove"
                        tools:ignore="ContentDescription" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>