<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handlers"
            type="com.jakode.covid19.ui.settings.LanguageDialog.MyHandlers" />

        <variable
            name="language"
            type="android.widget.ImageView" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottomSheetContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/header"
                android:layout_width="50dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bottom_sheet_header"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/language"
                android:textColor="@color/color_primary_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/english_label"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_ripple_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="@{(view) -> handlers.onClick(view, language)}"
                android:paddingStart="8dp"
                android:text="@string/english"
                android:textColor="@color/color_secondary_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/persian_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/english_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/english_label"
                app:layout_constraintEnd_toEndOf="@+id/english_label"
                app:layout_constraintTop_toTopOf="@+id/english_label"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/colorAccent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/persian_label"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_ripple_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:onClick="@{(view) -> handlers.onClick(view, language)}"
                android:paddingStart="8dp"
                android:text="@string/persian"
                android:textColor="@color/color_secondary_text"
                android:textDirection="ltr"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/english_label"
                app:layout_constraintStart_toStartOf="@+id/english_label"
                app:layout_constraintTop_toBottomOf="@+id/english_label"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/persian_tick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/persian_label"
                app:layout_constraintEnd_toEndOf="@+id/persian_label"
                app:layout_constraintTop_toTopOf="@+id/persian_label"
                app:srcCompat="@drawable/ic_tick"
                app:tint="@color/colorAccent"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>